# jarvis-m4

./: .gitignore  LICENSE  README.md  brain.py  config.yaml  ears.py  jarvis_icon.py  jarvis_logging.py  main.py  mouth.py  owner_face.py  pyproject.toml  requirements.txt  run.sh  vision.py  【点我】项目说明.txt  发布到GitHub.md  启动贾维斯.command  程序坞说明.txt  贾维斯设计.rtf  进阶说明.md  项目体检报告.md
JARVIS.app/Contents/MacOS/: JARVIS
models/face/: .gitkeep
prompts/: system.txt
scripts/: download_face_models.sh  download_openwakeword_models.sh  enable_openclaw_responses.py  enroll_owner.py  test_openclaw_http.py  安装到程序坞.sh
